@@ -115,12 +115,14 @@ Changed:
             ssggraph/
                 CMakeLists.txt added connection to frontend module
                 grboard.cpp
-                    added   grDispIntervention()
+                    included "Mediator.h"
+                    included "InterventionConfig.h"
+                    added   DispIntervention()
                     added   LoadInterventionTextures()
                     changed grInitBoardCar() 
                     changed refreshBoard()
                 grboard.h
-                    added grDispIntervention()  
+                    added DispIntervention()  
 
 
   data/
